--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ debugpy==1.8.1
 decorator==5.1.1
 executing==2.0.1
 Flask==3.0.2
+Flask-Cors==4.0.0
+geographiclib==2.0
+geopy==2.4.1
 idna==3.6
 ipykernel==6.29.4
 ipython==8.23.0
